# pantheon-mvp

./: .gitignore  .gitmodules  ADOPTION_REVIEW.md  CHANGELOG.md  Dockerfile  GOVERNANCE_STATUS.md  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml
.github/: vendor-radix-trigger
config/: README.md  site_lists.json
docs/: .rebase-note  .reconciliation-marker  COCKPIT_CARD_ACTION_MATRIX.md  COCKPIT_INFORMATION_MATRIX.md  COCKPIT_NAVIGATION_MATRIX.md  COCKPIT_RECONCILIATION_63.md  COCKPIT_STATUS_RECONCILED.md  COCKPIT_V2_STRUCTURED_INTERFACE.md  DOCUMENT_RUNTIME_LIVE_OBSERVATIONS.md  DOCUMENT_RUNTIME_STATUS.md  IMPLEMENTATION_COMPLETE_MARKER.md  LIVE_OBSERVER_DEPLOYMENT_NOTE.md  NO_ACTIVATION_NOTICE.md  PAPERLESS_DOCUMENT_ADAPTER.md  PR_SCOPE_DOCUMENT_RUNTIME_LIVE_OBSERVATIONS.md  README_RUNTIME_OBSERVATION_BOUNDARY.md  STATUS_CLASSIFICATION_DOCUMENT_RUNTIME_LIVE.md  SYNTHETIC_DOCUMENT_RUNTIME_CHECK.md  _STACK_NOTE.md
mvp_vertical/: __init__.py  capability_manager.py  cli.py  cockpit_api.py  cockpit_shell.py  contract.py  document_runtime_observer.py  documents.py  drafting.py  effect_guard.py  effect_preview.py  embedder.py  knowledge.py  knowledge_update.py  naming.py  paperless.py  paperless_gateway.py  paperless_ingestion.py  policy_gate.py  policy_request.py  register.py  resource_profiles.py  runner.py  signer.py  site_manifest_preview.py  site_navigation_profile.py  store.py  terminal_gate_standin.py  work_issue_read.py  work_issues.py
openwebui/: README.md  __init__.py  pantheon_document_cards.py  pantheon_document_runtime_live_status.py  pantheon_document_runtime_status.py  pantheon_paperless_documents.py
scripts/: document_runtime_synthetic_check.py
tests/: conftest.py  test_adversarial_dossier.py  test_block1.py  test_block2_drafting.py  test_capability_executor.py  test_capability_manager.py  test_cli_register.py  test_cockpit_api.py  test_cockpit_assets.py  test_cockpit_shell.py  test_decision_record.py  test_docling_documents.py  test_document_runtime_observer.py  test_document_runtime_synthetic_check.py  (+34 more)
(+81 files in other folders)
