[project]
name = "pantheon-mvp-vertical"
version = "0.1.0"
description = "Executable MVP vertical slice for the Pantheon Next governed task loop — external candidate, not adopted (Option A hosting arbitration, 2026-07-08)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "psycopg[binary]>=3.1",
  # Runtime, not test-only: load_contract validates every contract against the
  # vendored governance schema before use (Adoption review, Gate 1).
  "jsonschema>=4.22",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
mvp-vertical = "mvp_vertical.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mvp_vertical"]

# Ship the vendored governance schema + decision vocabulary as package data so
# the gate and load_contract resolve them from an installed wheel, not only from
# the repo checkout (review #12). They live under mvp_vertical/vendor/.
[tool.setuptools.package-data]
mvp_vertical = [
  "vendor/pantheon/*.yaml",
  "vendor/pantheon/UPSTREAM_COMMIT",
  "sql/*.sql",
]
